--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 #spring.jpa.hibernate.ddl-auto=create
+#create update none
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://172.23.235.220:3306/spring_test
+spring.datasource.url=jdbc:mysql://172.28.174.204:3306/spring_test
 spring.datasource.username=root
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
