--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 #create update none
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://172.28.163.152/spring_test
-spring.datasource.username=root
-spring.datasource.password=123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_test
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:mysql://172.28.163.152/spring_test
+#spring.datasource.username=root
+#spring.datasource.password=123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.hiddenmethod.filter.enabled=true
