--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #create update none
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring_test
 spring.datasource.username=postgres
 spring.datasource.password=postgres
